--- a/estiloux/home.html
+++ b/estiloux/home.html
@@ -15,7 +15,7 @@
     <header>
         <div class="layout-grid header-flex">
 
-            <h1>Estilo<span class="ux">Ux</span></h1>
+            <h1>Estilo<span class="ux">UX</span></h1>
             <nav>
                 <a href="a">Home</a>
 
@@ -29,8 +29,50 @@
     <main>
 
         <div class="layout-grid main-flex">
-            <section class="harmonia"></section>
-             <aside></aside>
+            <section class="harmonia"><img src="imagems/lapis.png" alt="">
+                <h2>Cores em harmonia</h2>
+                <p>Entenda como fazer combinaçao de cores que fazem sentido para sua identidade visual</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum consequuntur nesciunt in
+                    doloremque cupiditate suscipit eligendi
+                    iure? ag aek gbae obvusbwu gbaipj9ánb suor a9pfbaruog naep9g´</p>
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi cupiditate tempore, ea et eius
+                    incidunt iusto mollitia natus aogoago aogbag eaoubfiaebfauviohgwif bgiabg aege aiugbag eq
+                </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi cupiditate tempore, ea et eius
+                    incidunt iusto mollitia natus aogoago aogbag eaoubfiaebfauviohgwif bgiabg aege aiugbag eq
+                </p>
+
+            </section>
+
+            <aside>
+
+                <article>
+                    <h3>Buscar</h3>
+                </article>
+
+
+
+
+
+                <article>
+                    <h3>posts antigos</h3>
+                </article>
+
+
+
+
+
+                <article>
+                    <h3>Inscreva-se</h3>
+                </article>
+
+
+
+
+
+            </aside>
 
 
         </div>
@@ -38,7 +80,6 @@
     </main>
 
     <footer></footer>
-
 </body>
 
 </html>
