projeto Estilo Ux

--- a/estiloux/home.html
+++ b/estiloux/home.html
@@ -48,8 +48,10 @@
 
             <aside>
 
-                <article>
+                <article class="buscar-box">
                     <h3>Buscar</h3>
+                    <input type="text">
+                    <button>Ok</button>
                 </article>
 
 
